--- a/doc/src/AntScout.tex
+++ b/doc/src/AntScout.tex
@@ -1,8 +1,17 @@
 \documentclass[a4paper,10pt]{scrreprt}
 
+\usepackage[ngerman]{babel}
+\usepackage{graphicx}
 \usepackage[utf8]{inputenc}
 \usepackage{listings}
 \usepackage{scrhack}
+\usepackage{hyperref}
+\usepackage[
+  acronym,
+  nomain,
+  toc,
+  xindy
+]{glossaries}
 
 % Listings konfigurieren
 \lstset{
@@ -16,12 +25,21 @@
   showstringspaces = false
 }
 
+\makeglossaries
+
 \title{AntScout-Dokumentation}
 \author{Alexander Bertram}
 
 \begin{document}
 
 \maketitle
+
+\include{Akronyme}
+
+\printglossary[
+  title = Abkürzungsverzeichnis,
+  toctitle = Abkürzungsverzeichnis
+]
 
 \chapter{Typografische Konventionen}
 \label{chap:typografische-konventionen}
@@ -30,6 +48,17 @@ Konsolen-Kommandos, URLs oder Quellcode-Ausschnitte im Fließtext werden in eine
 
 \chapter{Allgemeine Problemstellung}
 \label{chap:allgemeine-problemstellung}
+
+Im Rahmen des Master-Projektes und der -Thesis soll eine Anwendung erstellt werden, in der der Ameisen-Algorithmus \textit{AntNet} auf realen Strassen-Karten für das dynamische Routing implementiert wird.
+Die Daten werden von \textit{OpenStreetMap} abgerufen und in einen Graphen umgewandelt, auf dem \textit{AntNet} operieren kann.
+Die Erstellung der Anwendung ist in zwei Schritte unterteilt:
+
+\begin{enumerate}
+  \item Abruf und Aufbereitung der Daten
+  \item \textit{AntNet}-Implementierung
+\end{enumerate}
+
+Der erste Schritt ist das Ziel des Master-Projektes und der zweite das Ziel der Master-Thesis.
 
 \chapter{Benutzerhandbuch}
 \label{chap:benutzerhandbuch}
@@ -40,7 +69,7 @@ Konsolen-Kommandos, URLs oder Quellcode-Ausschnitte im Fließtext werden in eine
 \section{Installation}
 \label{sec:installation}
 
-\textsc{AntScout} benötigt keine Installation.
+\textit{AntScout} benötigt keine Installation.
 Das Archiv muss lediglich auf die lokale Festplatte extrahiert werden.
 Dabei wird der Ordner ``AntScout'' erstellt, der alles beinhaltet, was für den Start der Anwendung nötig ist.
 
@@ -91,6 +120,101 @@ oder einfach die Konsole schliessen.
 \section{Bedienungsanleitung}
 \label{sec:bedienungsanleitung}
 
+\subsection{Front-End}
+\label{sec:front-end}
+
+Nach dem Aufruf \texttt{http://localhost:8080} im Browser öffnet sich die Start-Seite.
+Ein Screenshot dieser Seite ist in der Abbildung \ref{fig:start-seite} zu sehen.
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{Bilder/Start-Seite.png}
+  \caption{Start-Seite}
+  \label{fig:start-seite}
+\end{figure}
+
+Die Seite ist in drei Bereiche unterteilt:
+
+\subsubsection{Menü}
+\label{sec:menue}
+
+Die obere Leiste stellt das Menü dar.
+Hier kann zwischen der Karten- und der Statistiken-Ansicht (siehe Abschnitt \ref{sec:statistiken}) umgeschaltet werden.
+
+\subsubsection{Karte}
+\label{sec:karte}
+
+Die Karte nimmt den größten Platz der Seite ein.
+Hier sind die Kreuzungen - nachfolgend Knoten genannt - zu sehen, zwischen denen navigiert werden kann und die Wege, die die Knoten verbinden.
+Jeder Knoten und jeder Weg kann durch einen Maus-Klick markiert werden.
+Dieser wird dann optisch hervorgehoben.
+
+\subsubsection{Informationen}
+\label{sec:informationen}
+
+Der Informationen-Bereich auf der rechten Seite ist in drei weitere Bereiche unterteilt:
+
+\paragraph{Pfad}
+\label{sec:pfad}
+
+Wenn ein Pfad gefunden wurde, werden hier die Länge und die Passier-Zeit angezeigt (siehe Abbildung \ref{fig:pfad-informationen}).
+Mit dem Button rechts oben können weitere Informationen eingeblendet werden.
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=0.3\textwidth]{Bilder/Pfad-Informationen.png}
+  \caption{Pfad-Informationen}
+  \label{fig:pfad-informationen}
+\end{figure}
+
+\paragraph{Knoten}
+\label{sec:knoten}
+
+Nach der Markierung eines Knotens werden in diesem Bereich die Knoten-Daten eingetragen.
+Es handelt sich um die Id und die geographischen Daten, die direkt aus \gls{osm} übernommen werden (siehe Abbildung \ref{fig:knoten-informationen}).
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=0.3\textwidth]{Bilder/Knoten-Informationen.png}
+  \caption{Knoten-Informationen}
+  \label{fig:knoten-informationen}
+\end{figure}
+
+Die drei Buttons rechts oben im Knoten-Informationen-Bereich (siehe Abbildung \ref{fig:knoten-buttons}) führen verschiedene Aktionen aus.
+Mit dem linken kann die aktuell selektierte Kreuzung als Start und mit dem mittleren als Ziel gesetzt werden.
+Ein als Start oder Ziel gesetzter Knoten wird mit einem entsprechenden Marker versehen (siehe Abbildungen \ref{fig:start-knoten} und \ref{fig:ziel-knoten}).
+Mit dem rechten Button können weitere Informationen über die aktuell selektierte Knoten-Konstellation eingeblendet werden.
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=0.15\textwidth]{Bilder/Knoten-Buttons.png}
+  \caption{Knoten-Buttons}
+  \label{fig:knoten-buttons}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{Bilder/Start-Knoten.png}
+  \caption{Start-Knoten}
+  \label{fig:start-knoten}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{Bilder/Ziel-Knoten.png}
+  \caption{Ziel-Knoten}
+  \label{fig:ziel-knoten}
+\end{figure}
+
+\paragraph{Weg}
+\label{sec:weg}
+
+Hier werden die Daten eines selektierten Weges angezeigt.
+Neben einer Weg-Id werden hier die Länge, die maximale Geschwindigkeit und die Knoten angezeigt, aus denen der Weg besteht.
+
+\subsubsection{Statistiken}
+\label{sec:statistiken}
+
 \subsection{Konfiguration}
 \label{sec:konfiguration}
 
@@ -115,7 +239,7 @@ name = wert
 Jede Änderung der Konfiguration wird erst nach einem Neustart der Applikation wirksam.
 
 \subsubsection{Karte}
-\label{sec:karte}
+\label{sec:konfiguration-karte}
 
 Der Parameter \texttt{map} steuert, welche Karte verwendet werden soll.
 Es sind mehrere Karten in verschiedenen Größen vordefiniert.
