Erste Version des Benutzer-Handbuches.

--- a/doc/src/Akronyme.tex
+++ b/doc/src/Akronyme.tex
@@ -1,2 +1,3 @@
-\newacronym{osm}{OSM}{\textit{OpenStreetMap}}
+\newacronym{osm}{OSM}{OpenStreetMap}
+\newacronym{sbt}{sbt}{Simple Build Tool}
 \newacronym{url}{URL}{Uniform Resource Locator}
