Erste Version des Entwickler-Handbuches.

--- a/doc/src/Akronyme.tex
+++ b/doc/src/Akronyme.tex
@@ -1,3 +1,8 @@
+\newacronym{api}{API}{Application Programming Interface}
+\newacronym{ide}{IDE}{Integrated Development Environment}
+\newacronym{json}{JSON}{JavaScript Object Notation}
+\newacronym{jvm}{JVM}{Java Virtual Machine}
 \newacronym{osm}{OSM}{OpenStreetMap}
+\newacronym{rest}{REST}{Representational State Transfer}
 \newacronym{sbt}{sbt}{Simple Build Tool}
-\newacronym{url}{URL}{Uniform Resource Locator}
+\newacronym{xml}{XML}{Extensible Markup Language}
