--- a/doc/src/AntScout.tex
+++ b/doc/src/AntScout.tex
@@ -9,6 +9,7 @@
 \usepackage{listings}
 \usepackage{scrhack}
 \usepackage[shadow]{todonotes}
+\usepackage{tabularx}
 \usepackage{hyperref}
 \usepackage[
   acronym,
