Anmerkungen von Herrn Iwanowski eingepflegt.

--- a/doc/src/AntScout.tex
+++ b/doc/src/AntScout.tex
@@ -79,8 +79,8 @@ Die Daten werden von \gls{osm} abgerufen und in einen Graphen umgewandelt, auf d
 Die Erstellung der Anwendung ist in zwei Schritte unterteilt:
 
 \begin{enumerate}
-  \item Abruf und Aufbereitung der Daten
-  \item \textit{AntNet}-Implementierung
+  \item Abruf und Aufbereitung der Daten sowie die Bereitstellung des Software-Werkzeugs zur Parametrisierung der Problemstellung
+  \item \textit{AntNet}-Implementierung und Einstellung der Parameter
 \end{enumerate}
 
 Der erste Schritt ist das Ziel des Master-Projektes und der zweite das Ziel der Master-Thesis.
