--- a/doc/src/Benutzer-Handbuch.tex
+++ b/doc/src/Benutzer-Handbuch.tex
@@ -210,7 +210,7 @@ Diese ist in drei Bereiche unterteilt (Abbildung \ref{fig:statistiken}):
 \label{sec:ameisen-statistiken}
 
 In diesem Bereich ist oben eine Tabelle zu sehen.
-In dieser ist jeweils die Anzahl der erzeugten, der das Ziel erreichten, der in einer Sack-Gasse angekommenen und der das maximale Alter überschrittenen Ameisen aufgeführt.
+In dieser ist jeweils die Anzahl der erzeugten, der das Ziel erreichten, der in einer Sackgasse angekommenen und der das maximale Alter überschrittenen Ameisen aufgeführt.
 Es wird sowohl die Anzahl pro Sekunde als auch die Gesamt-Anzahl angezeigt.
 Unter der Tabelle ist das durchschnittliche Ameisen-Alter, die Leerlauf-Zeit der Ameisen und die Zeit, die zum Auswählen des nächsten Knotens benötigt wurde, angezeigt.
 
@@ -251,7 +251,7 @@ Hier sind folgende Angaben zu finden:
 \label{sec:routing}
 
 Wenn sowohl Start als auch Ziel wie in Abschnitt \ref{sec:knoten-informationen} beschrieben gesetzt wurden, sucht \textit{AntScout} eine Route vom Start zum Ziel und zeigt diese an (Abbildung \ref{fig:route}).
-Jetzt kann einer der Wege, der auf der Route liegt selektiert und dessen maximale Geschwindigkeit wie in Abschnitt \ref{sec:weg-informationen} beschrieben verändert werden.
+Jetzt kann ein beliebiger Weg, unabhängig davon, ob dieser auf der Route liegt, selektiert und dessen maximale Geschwindigkeit wie in Abschnitt \ref{sec:weg-informationen} beschrieben verändert werden.
 Eine starke Verringerung der Geschwindigkeit veranlasst das System nach einer schnelleren Route zu suchen und diese anzuzeigen (Abbildung \ref{fig:alternative-route}).
 
 \begin{figure}[htbp]
@@ -354,4 +354,4 @@ map = maps/Altona-50-Knoten.osm
 \label{sec:wiederanlaufbedingungen}
 
 Sollte die Anwendung einmal abstürzen oder/und nicht mehr reagieren, kann sie wie in Abschnitt \ref{sec:programm-ende} beschrieben beendet werden.
-In Abschnitt \ref{sec:programm-ende} ist geschildert, wie die Anwendung erneut gestartet werden kann.
+In Abschnitt \ref{sec:programm-start} ist geschildert, wie die Anwendung erneut gestartet werden kann.
