Anpassungen an die für die Masterthesis vorgenommenen Änderungen.

--- a/doc/src/Akronyme.tex
+++ b/doc/src/Akronyme.tex
@@ -1,8 +1,14 @@
-\newacronym{api}{API}{Application Programming Interface}
-\newacronym{ide}{IDE}{Integrated Development Environment}
-\newacronym{json}{JSON}{JavaScript Object Notation}
-\newacronym{jvm}{JVM}{Java Virtual Machine}
-\newacronym{osm}{OSM}{OpenStreetMap}
-\newacronym{rest}{REST}{Representational State Transfer}
-\newacronym{sbt}{sbt}{Simple Build Tool}
-\newacronym{xml}{XML}{Extensible Markup Language}
+\phantomsection
+\addcontentsline{toc}{chapter}{Abkürzungsverzeichnis}
+\renewcommand\refname{Abkürzungsverzeichnis} \chapter*{Abkürzungsverzeichnis}
+
+\begin{acronym}
+  \acro{api}[API]{Application Programming Interface}
+  \acro{ide}[IDE]{Integrated Development Environment}
+  \acro{json}[JSON]{JavaScript Object Notation}
+  \acro{jvm}[JVM]{Java Virtual Machine}
+  \acro{osm}[OSM]{OpenStreetMap}
+  \acro{rest}[REST]{Representational State Transfer}
+  \acro{sbt}{Simple Build Tool}
+  \acro{xml}[XML]{Extensible Markup Language}
+\end{acronym}
