Anleitung zum Schnellstart in der README.

--- a/README
+++ b/README
@@ -1,1 +1,24 @@
-AntScout
+AntScout implementiert den Ameisenalgorithmus AntNet, um dynamisches Routing auf OpenStreetMap-Karten zu realisieren.
+
+Nachfolgend sind die Schritte für einen Schnellstart aufgelistet. Ausführliche Dokumentation ist unter [doc/AntScout.pdf](doc/AntScout.pdf) zu finden.
+
+# Programmstart
+
+## Voraussetzungen
+
+* Eine bestehende Internetverbindung.
+* Eine möglichst aktuelle Java-Version von Oracle.
+* Der lokale Port `8080` darf nicht durch eine bereits laufende Anwendung blockiert sein.
+
+## Start
+
+* Konsole öffnen
+* `sbt`
+* `container:start`
+* [http://localhost:8080](http://localhost:8080) oder [http://127.0.0.1:8080](http://127.0.0.1:8080) im Browser aufrufen
+
+## Hinweise
+
+* Nach dem Start von `sbt` werden alle benötigten Bibliotheken heruntergeladen. Je nach Internetverbindung kann dieser Vorgang mehrere Minuten dauern.
+* Nach der Eingabe von `container:start` werden die benötigten Karten heruntergeladen und vorverarbeitet. Dieser Vorgang kann auch je nach Internetverbindung und Computerleistung mehrere Minuten dauern.
+* Es sollte nach Möglichkeit ein möglichst moderner Browser, der HTML5 unterstützt, verwendet werden.
